--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <iframe src="https://player.twitch.tv/?channel=otplol_&parent=www.example.com" frameborder="0" allowfullscreen="true"
+  <iframe src="https://player.twitch.tv/?channel=otplol_&parent=https://chasemilligan.github.io/streamoverlay/" frameborder="0" allowfullscreen="true"
     scrolling="no" height="378" width="620"></iframe>
 </body>
 </html>
