--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <iframe src="https://player.twitch.tv/?channel=otplol_&parent=chasemilligan.github.io" frameborder="0" allowfullscreen="true"
-    scrolling="no" height="378" width="620"></iframe>
+    scrolling="no" height="378" width="620" muted="false"></iframe>
 </body>
 </html>
