--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <iframe src="https://player.twitch.tv/?channel=otplol_&parent=chasemilligan.github.io" frameborder="0" allowfullscreen="true"
-    scrolling="no" height="378" width="620" muted="false"></iframe>
+  <!-- Add a placeholder for the Twitch embed -->
+  <div id="twitch-embed"></div>
+  
+  <!-- Load the Twitch embed script -->
+  <script src="https://player.twitch.tv/js/embed/v1.js"></script>
+  
+  <!-- Create a Twitch.Player object. This will render within the placeholder div -->
+  <script type="text/javascript">
+    new Twitch.Player("twitch-embed", {
+      channel: "otplol_",
+      parent: "chasemilligan.github.io"
+    });
+  </script>
 </body>
 </html>
