--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
   
   <!-- Create a Twitch.Player object. This will render within the placeholder div -->
   <script type="text/javascript">
-    new Twitch.Player("twitch-embed", {
-      channel: "otplol_",
-      parent: "chasemilligan.github.io"
-    });
+    var options = {
+      width: '720',
+      height: '1080',
+      channel: "drututt",
+      // only needed if your site is also embedded on embed.example.com and othersite.example.com
+      parent: ["chasemilligan.github.io"]
+    };
+    var player = new Twitch.Player("twitch-embed", options);
+    player.setVolume(0.5);
   </script>
 </body>
 </html>
