--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     var options = {
       width: '1080',
       height: '720',
-      channel: "caedrel",
+      channel: "otplol_",
       // only needed if your site is also embedded on embed.example.com and othersite.example.com
       parent: ["chasemilligan.github.io"]
     };
     var player = new Twitch.Player("twitch-embed", options);
     player.setVolume(1);
+    console.log(player)
   </script>
 </body>
 </html>
