--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     };
     var player = new Twitch.Player("twitch-embed", options);
     player.setVolume(1);
-    console.log(player)
+    console.log(player.getPlayerState());
   </script>
 </body>
 </html>
