--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     var options = {
       width: '1080',
       height: '720',
-      channel: "caedrel",
+      channel: "otplol_",
       // only needed if your site is also embedded on embed.example.com and othersite.example.com
       parent: ["chasemilligan.github.io"]
     };
