--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
   
   <!-- Load the Twitch embed script -->
   <script src="https://player.twitch.tv/js/embed/v1.js"></script>
+
+  <script type="text/javascript">
+    fetch('https://api.twitch.tv/helix/streams', {
+        method: 'GET',
+        headers: {
+          'Authorization': 'Bearer tdv4u2ufal2s8deor07onwaomte7k1',
+          'Client-Id': 'ozvz2v72drsjcrn29yg26m15a1yg5r'
+        }
+      })
+      .then(response => response.json())
+      .then(data => console.log(data))
+      .catch(error => console.error('Error:', error));
+
+  </script>
   
   <!-- Create a Twitch.Player object. This will render within the placeholder div -->
   <script type="text/javascript">
@@ -24,7 +38,6 @@
     };
     var player = new Twitch.Player("twitch-embed", options);
     player.setVolume(1);
-    console.log(player);
   </script>
 </body>
 </html>
