adding my channel

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <script type="text/javascript">
     function checkStreamStatus() {
-      fetch('https://api.twitch.tv/helix/streams?user_login=otplol_', {
+      fetch('https://api.twitch.tv/helix/streams?user_login=goopagames', {
         method: 'GET',
         headers: {
           'Client-Id': '5qy56shg10z7dcdfxv2oawmhrai47j',
