--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script src="https://player.twitch.tv/js/embed/v1.js"></script>
 
   <script type="text/javascript">
-    const channelName = 'otplol_';
+    const channelName = 'goopagames';
     function checkStreamStatus() {
       fetch(`https://api.twitch.tv/helix/streams?user_login=${channelName}`, {
         method: 'GET',
@@ -57,7 +57,7 @@
           const now = new Date();
           const currentHour = now.getHours();
 
-          if (currentHour >= 8 || currentHour < 7) {
+          if (currentHour >= 19 || currentHour < 7) {
             element.classList.add(className);
 
           } else {
