--- a/index.html
+++ b/index.html
@@ -26,7 +26,47 @@
   <script src="https://player.twitch.tv/js/embed/v1.js"></script>
 
   <script type="text/javascript">
+    let lastGithubDeployment;
     const channelName = 'goopagames';
+
+    const repoOwner = 'chasemilligan';  // Replace with the GitHub username or organization
+    const repoName = 'streamoverlay';       // Replace with the repository name
+    const token = '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';         // Optional: GitHub Personal Access Token
+
+    async function getPagesDeploymentStatus() {
+      const url = `https://api.github.com/repos/${repoOwner}/${repoName}/pages/builds/latest`;
+      const headers = token ? { 'Authorization': `token ${token}` } : {};
+
+      try {
+        const response = await fetch(url, { headers });
+        if (!response.ok) {
+          throw new Error(`Error fetching deployment status: ${response.statusText}`);
+        }
+
+        const data = await response.json();
+        console.log('Deployment Status:', data);
+
+        if (!lastGithubDeployment) {
+          lastGithubDeployment = data.updated_at;
+        } else if (lastGithubDeployment !== data.updated_at) {
+          console.log('New deployment detected!');
+          lastGithubDeployment = data.updated_at;
+          window.location.reload();
+        }
+
+        if (data.status === 'built') {
+          console.log('Deployment successful!');
+        } else {
+          console.log('Deployment status:', data.status);
+        }
+      } catch (error) {
+        console.error('Error:', error);
+      }
+    }
+
+    getPagesDeploymentStatus();
+
+
     function checkStreamStatus() {
       fetch(`https://api.twitch.tv/helix/streams?user_login=${channelName}`, {
         method: 'GET',
