--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 
     const repoOwner = 'chasemilligan';  // Replace with the GitHub username or organization
     const repoName = 'streamoverlay';       // Replace with the repository name
-    const token = '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';         // Optional: GitHub Personal Access Token
 
     async function getPagesDeploymentStatus() {
       const url = `https://api.github.com/repos/${repoOwner}/${repoName}/pages/builds/latest`;
-      const headers = token ? { 'Authorization': `token ${token}` } : {};
+      const headers = token ? { 'Authorization': `token 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` } : {};
 
       try {
         const response = await fetch(url, { headers });
