--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
 
     const repoOwner = 'chasemilligan';  // Replace with the GitHub username or organization
     const repoName = 'streamoverlay';       // Replace with the repository name
+    const tokenPrefix = 'ghp_';         // Optional: Prefix for the GitHub Personal Access Token
+    const token = 'tRJ0M90CoofIHpy0CPKOP5bbtHkTLq4HBpXA';         // Optional: GitHub Personal Access Token
 
     async function getPagesDeploymentStatus() {
       const url = `https://api.github.com/repos/${repoOwner}/${repoName}/pages/builds/latest`;
-      const headers = token ? { 'Authorization': `token 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` } : {};
+      const headers = token ? { 'Authorization': `token ${tokenPrefix}${token}` } : {};
 
       try {
         const response = await fetch(url, { headers });
@@ -52,6 +54,8 @@
           lastGithubDeployment = data.updated_at;
           window.location.reload();
         }
+
+        console.log(lastGithubDeployment);
 
         if (data.status === 'built') {
           console.log('Deployment successful!');
