detect github deployments

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
     const repoOwner = 'chasemilligan';  // Replace with the GitHub username or organization
     const repoName = 'streamoverlay';       // Replace with the repository name
-    const tokenPrefix = 'ghp_';         // Optional: Prefix for the GitHub Personal Access Token
-    const token = 'tRJ0M90CoofIHpy0CPKOP5bbtHkTLq4HBpXA';         // Optional: GitHub Personal Access Token
+    const tokenPrefix = 'gh';         // Optional: Prefix for the GitHub Personal Access Token
+    const token = 'p_tRJ0M90CoofIHpy0CPKOP5bbtHkTLq4HBpXA';         // Optional: GitHub Personal Access Token
 
     async function getPagesDeploymentStatus() {
       const url = `https://api.github.com/repos/${repoOwner}/${repoName}/pages/builds/latest`;
