--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GOOPA STREAM OVERLAY!</title>
+  <title>GOOPA STREAM OVERLAY</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Add a placeholder for the Twitch embed -->
   <div class="info-container">
-    <h1>WCC Big Bud AUTO</h1>
+    <h1>WCC Big Bud AUTO!</h1>
   </div>
   <div id="lights-out">
     <h1><span class="fast-flicker">L</span>igh<span class="mid-flicker">t</span>s O<span class="flicker">u</span>t<span class="fast-flicker">!</span></h1>
