--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         }
       } catch (error) {
         console.error('Error:', error);
+        msgElement.textContent = 'Error fetching deployment status';
       }
     }
 
