--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GOOPA STREAM OVERLAY</title>
   <link rel="stylesheet" href="styles.css">
+  <script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
   <!-- Add a placeholder for the Twitch embed -->
