--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Add a placeholder for the Twitch embed -->
   <div class="info-container">
-    <h1>WCC Big Bud AUTO!</h1>
+    <h1>WCC Big Bud AUTO</h1>
   </div>
   <div id="lights-out">
     <h1><span class="fast-flicker">L</span>igh<span class="mid-flicker">t</span>s O<span class="flicker">u</span>t<span class="fast-flicker">!</span></h1>
