--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         method: 'GET',
         headers: {
           'Content-Type': 'application/json',
+          'Access-Control-Allow-Origin': '*',
+          'mode': 'no-cors'
         }
       })
       .then(response => response.json())
