--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
       <p>Day: <span id="days-display"></span></p>
       <p>Growth Stage: Seed</p>
-      <p>Light Intensity: 30%</p>
+      <p>Light Intensity: 25%</p>
     </div>
   </div>
   <div id="lights-out">
@@ -82,7 +82,7 @@
           const currentHour = now.getHours();
           const currentMinute = now.getMinutes();
 
-          if (((currentHour >= 18 && currentMinute >= 40) || currentHour >= 19) || ((currentHour < 6 && currentMinute < 40) || currentHour < 7)) {
+          if (currentHour >= 0 && currentHour < 6) {
             element.classList.add(className);
           } else {
             element.classList.remove(className);
