--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       .catch(error => console.error('Error:', error));
     }
 
-    checkStreamStatus();
-    setInterval(checkStreamStatus, 1 * 60 * 1000);
+    // checkStreamStatus();
+    // setInterval(checkStreamStatus, 1 * 60 * 1000);
 
     function calculateDaysPassed(startDate) {
       const oneDay = 24 * 60 * 60 * 1000; // hours * minutes * seconds * milliseconds
@@ -82,7 +82,7 @@
           const currentHour = now.getHours();
           const currentMinute = now.getMinutes();
 
-          if (((currentHour >= 18 && currentMinute >= 40) || currentHour >= 19) || ((currentHour < 6 && currentMinute < 40) || currentHour < 7)) {
+          if (currentHour >= 0 && currentHour < 15) {
             element.classList.add(className);
           } else {
             element.classList.remove(className);
