--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       .catch(error => console.error('Error:', error));
     }
 
-    // checkStreamStatus();
-    // setInterval(checkStreamStatus, 1 * 60 * 1000);
+    checkStreamStatus();
+    setInterval(checkStreamStatus, 1 * 60 * 1000);
 
     function calculateDaysPassed(startDate) {
       const oneDay = 24 * 60 * 60 * 1000; // hours * minutes * seconds * milliseconds
