--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <hr/>
     <div>
       <p>Day: <span id="days-display"></span></p>
-      <p>Growth Stage: Seedling</p>
-      <p>Light Intensity: 50%</p>
+      <p>Growth Stage: Vegetating</p>
+      <p>Light Intensity: 100%</p>
     </div>
   </div>
   <div id="lights-out">
