--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <hr/>
     <div>
       <p>Day: <span id="days-display"></span></p>
-      <p>Growth Stage: Vegetating</p>
+      <p>Growth Stage: Flowering</p>
       <p>Light Intensity: 100%</p>
     </div>
   </div>
